<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <ImageView
        android:id="@+id/ivAvcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/img_start_logo" />

    <EditText
        android:id="@+id/editTextIp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ivAvcon"
        android:layout_centerHorizontal="true"
        android:hint="@string/c_ip"
        android:digits="1234567890."
        android:maxLength="20"
        android:singleLine="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/editTextIp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/rbm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/c_m1" />

        <RadioButton
            android:id="@+id/rbm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/c_m2" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/llUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/c_user"
            android:maxLength="10"
            android:nextFocusDown="@+id/editTextPwd"
            android:nextFocusRight="@+id/editTextPwd"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/editTextPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_pwd"
            android:maxLength="10"
            android:nextFocusDown="@+id/btn_enter"
            android:nextFocusRight="@+id/btn_enter"
            android:password="true"
            android:singleLine="true"/>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_server_login"
            android:checked="false" />
    </LinearLayout>
    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/llUser"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selector_btn_default"
        android:text="@string/c_enter1" />
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="版本号"
        android:textSize="@dimen/text_defaultPx6" />
</RelativeLayout>